<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/space_base"
            android:layout_marginEnd="@dimen/space_base">
        <TextView
                android:id="@+id/tv_app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_small"
                android:text="@string/text_info"/>
        <TextView
                android:id="@+id/tv_folder_path_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_normal"
                android:layout_marginTop="@dimen/space_second"
                android:text="@string/text_folder"/>

        <TextView
                android:id="@+id/tv_folder_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empty_folder"
                android:textColor="@color/colorBlue3"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_folder"
                android:onClick="folderChooser"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"/>
        <TextView
                android:id="@+id/tv_url_path_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/text_normal"
                android:layout_marginTop="@dimen/space_second"
                android:text="@string/text_url_info"/>
        <EditText
                android:id="@+id/tv_url_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_url"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save_and_parse"
                android:onClick="parseUrl"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="取得Lofter內容"
                android:onClick="lofterParseUrl"
                android:visibility="gone"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="取得AO3單篇內容"
                android:onClick="ao3ParseUrlSingle"
                android:visibility="gone"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="取得AO3多篇內容"
                android:onClick="ao3ParseUrlMuti"
                android:visibility="gone"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="顯示懸浮視窗"
                android:onClick="showFloatWindow"
                android:visibility="gone"/>
    </LinearLayout>

</ScrollView>